--- a/udemy-full-stack.html
+++ b/udemy-full-stack.html
@@ -6,10 +6,43 @@
 </head>
 
 <body>
-	<h1>Things I've learned</h1>
+
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Breed</th>
+			<tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Nyx</td>
+				<td>Husky</td>
+			</tr>
+			<tr>
+				<td>Iris</td>
+				<td>Cavalier</td>
+			</tr>
+			<tr>
+				<td>Bingo</td>
+				<td>Scrappy</td>
+			</tr>
+		</tbody>
+	</table>
+
+
+
+
+	<!-- <h1>Things I've learned</h1>
+
+	<a href="http://www.npr.org" target="">
+		<div class="husky">
+			<img src="./husky-pup.jpg">
+		</div>
+	</a>
 
 	<div class="basics">
-		<h2>Internet basics</h2>
+		<a href="second-page.html"><h2>Internet basics</h2></a>
 		<ol>
 			<li>HTTP Requests</li>
 			<li>IP Address</li>
@@ -39,6 +72,16 @@
 			</ul>
 		</ul>
 	</div>
+
+	<div>
+		<h1>Practice with divs</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. <span>Excepteur</span> sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div> -->
 
 </body>
 
