Made a poke-table

--- a/udemy-full-stack.html
+++ b/udemy-full-stack.html
@@ -7,25 +7,27 @@
 
 <body>
 
-	<table>
+	<table border="1">
 		<thead>
 			<tr>
+				<th>Image</th>
 				<th>Name</th>
-				<th>Breed</th>
+				<th>Type</th>
+				<th>Evolves to:</th>
 			<tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td>Nyx</td>
-				<td>Husky</td>
+				<td><img width="50" src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png" /></td>
+				<td>Bulbosaur</td>
+				<td>Grass/poison</td>
+				<td><a href="http://pokemon.wikia.com/wiki/Ivysaur">Ivysaur</a></td>
 			</tr>
 			<tr>
-				<td>Iris</td>
-				<td>Cavalier</td>
-			</tr>
-			<tr>
-				<td>Bingo</td>
-				<td>Scrappy</td>
+				<td><img width="50" src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png" /></td>
+				<td>Charmander</td>
+				<td>Fire</td>
+				<td><a href="http://pokemon.wikia.com/wiki/Charmeleon">Charmeleon</a></td>
 			</tr>
 		</tbody>
 	</table>
