I don't remember what I did last

--- a/udemy-full-stack.html
+++ b/udemy-full-stack.html
@@ -3,241 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<title>My practice page</title>
+	<link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
 
 <body>
 
-<h3>Register here</h3>
-
-<form>
-	
-	<div>
-		<label>First name:
-			<input type="text" name="firstName" required>
-		</label>
-
-
-		<label>Last name:
-			<input type="text" name="lastName" required>
-		</label>
-	</div>
-
-	<div>
-		<label for="male">Male
-			<input type="radio" id="male" value="female" name="gender">
-		</label>
-
-
-		<label for="female">Female
-			<input type="radio" id="female" value="female" name="gender">
-		</label>
-
-		<label for="other">Other
-			<input type="radio" id="other" value="other" name="gender">
-		</label>
-	</div>
-
-	<div>
-		<label>Email:
-			<input type="email" name="email" placeholder="your email here" required>
-		</label>
-
-		<label>Password:
-			<input type="password" name="password" minlength="5" maxlength="10" placeholder="password">
-		</label>
-	</div>
-
-	<div>
-		<label for="birthday">Birthday:
-			<select name="birthday">
-				<option value="month">Month</option>
-				<option value="jan">January</option>
-				<option value="feb">February</option>
-				<option value="march">March</option>
-				<option value="april">April</option>
-				<option value="may">May</option>
-				<option value="june">June</option>
-				<option value="july">July</option>
-				<option value="aug">August</option>
-				<option value="sep">September</option>
-				<option value="oct">October</option>
-				<option value="nov">November</option>
-				<option value="dec">December</option>
-			</select>
-			<select name="day">
-				<option>1</option>
-				<option>2</option>
-				<option>3</option>
-				<option>4</option>
-				<option>5</option>
-				<option>6</option>
-				<option>7</option>
-				<option>8</option>
-				<option>9</option>
-				<option>10</option>
-			</select>
-			<select>
-				<option>1990</option>
-				<option>1991</option>
-				<option>1992</option>
-				<option>1993</option>
-				<option>1994</option>
-				<option>1995</option>
-				<option>1996</option>
-				<option>1997</option>
-				<option>1998</option>
-				<option>1999</option>
-			</select>
-		</label>
-	</div>
-
-	<div>
-		<label>I agree to the terms and conditions.
-			<input type="checkbox" name="agree">
-		</label>
-	</div>
-
-	<button>Submit</button>
-</form>
-
-	<!-- <p>Where do you want to go?</p>
-	<form>
-		<select name="destination">
-			<option value="caribbean">Cozumel</option>
-			<option value="rainy">Seattle</option>
-			<option value="desert">Moab</option>
-			<option value="beach">Daytona Beach</option>
-		</select>
-
-		<textarea name="tellMe" rows="10" columns="50"></textarea>
-		<button>Take me</button>
-	</form> -->
-
-	<!-- `name` attribute is used when sending data in a form submission; `id` is used to refer to HTML elements when writing CSS and JS -->
-
-<!-- 	<p>Do you prefer muffins, scones, bagels or croissants?</p>
-	  	<form>
-			<label for="muffins">Muffins
-				<input type="radio" id="muffins" value="muffins" name="breakfast"> --> <!-- Used if the user gets one choice -->
-			<!-- </label>
-
-			<label for="scones">Scones
-				<input type="radio" id="scones" value="scones" name="breakfast">
-			</label>
-
-			<label for="bagels">Bagels
-				<input type="radio" id="bagels" value="bagels" name="breakfast">
-			</label>
-
-			<label for="croissants">Croissants
-				<input type="radio" id="croissants" value="croissants" name="breakfast">
-			</label>
-
-			<button>Breakfast me</button>
-		</form>
-
-
-	<h2>Here is my login form:</h2>
-
-	<form>
-		<input type="checkbox" name="breakfast">
-
-		<label>Choose a username: 
-			<input type="text" name="username" placeholder="Your name">
-		</label>
-
-		<label>Enter your email: 
-			<input type="email" name="email" placeholder="Your email">
-		</label>
-
-		<label for="password">Password: </label>
-		<input type="password" id="password" name="password" placeholder="password">
-
-		<label for="color">Choose a color: </label>
-		<input type="color" id="color" name="theme">
-
-		<button>Submit</button>
-	</form>
- -->
-
-<!---------------------------------- Table Practice ------------------------------------>
-	<!-- <table border="1">
-		<thead>
-			<tr>
-				<th>Image</th>
-				<th>Name</th>
-				<th>Type</th>
-				<th>Evolves to:</th>
-			<tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td><img width="50" src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png" /></td>
-				<td>Bulbosaur</td>
-				<td>Grass/poison</td>
-				<td><a href="http://pokemon.wikia.com/wiki/Ivysaur">Ivysaur</a></td>
-			</tr>
-			<tr>
-				<td><img width="50" src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png" /></td>
-				<td>Charmander</td>
-				<td>Fire</td>
-				<td><a href="http://pokemon.wikia.com/wiki/Charmeleon">Charmeleon</a></td>
-			</tr>
-		</tbody>
-	</table> -->
-
-
-
-<!---------------------------------- Basic HTML and list practice ------------------------------------>
-	<!-- <h1>Things I've learned</h1>
-
-	<a href="http://www.npr.org" target="">
-		<div class="husky">
-			<img src="./husky-pup.jpg">
-		</div>
-	</a>
-
-	<div class="basics">
-		<a href="second-page.html"><h2>Internet basics</h2></a>
-		<ol>
-			<li>HTTP Requests</li>
-			<li>IP Address</li>
-			<li>Servers</li>
-		</ol>
-	</div>
-
-	<div class="content">
-		<h2>HTML</h2>
-		<ul>
-			<li>Stands for HTTP</li>
-			<li>Lots o' tags</li>
-			<ul>
-				<li>Boilerplate</li>
-				<ol>
-					<li>Doctype</li>
-					<li>HTML</li>
-					<li>Head</li>
-					<ol>
-						<li>Title
-					</ol>
-					<li>Headings</li>
-					<li>Paragraph</li>
-					<li><em>em</em></li>
-					<li><b>strong</b></li>
-				</ol>
-			</ul>
-		</ul>
-	</div>
-
-	<div>
-		<h1>Practice with divs</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. <span>Excepteur</span> sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</div> -->
+	<h1>Title style</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </body>
 
